--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ header ul li:hover {
   border: 2px solid rgba(109, 28, 28, 1);
 }
 .card p {
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 0;
 }
 .card h3 {
   color: var(--dark-red);
@@ -721,6 +721,9 @@ header ul li:hover {
     border-left: 3px solid rgba(0, 0, 0, 0.055);
     border-right: 3px solid rgba(0, 0, 0, 0.055);
     border-bottom: 3px solid rgba(0, 0, 0, 0.055);
+  }
+  .card-availability h4 {
+    padding-top: 0.6rem;
   }
   .card:nth-child(1) .card-head {
     grid-row: 1;
