--- a/css/style.css
+++ b/css/style.css
@@ -685,7 +685,7 @@ header ul li:hover {
     border-right: 3px solid rgba(0, 0, 0, 0.055);
   }
   .card .card-taste {
-    padding: 0.5rem 1rem;
+    padding: 0rem 1rem 0.5rem;
     background-color: #f2fafa;
     z-index: 1;
     -webkit-box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
@@ -1062,7 +1062,7 @@ header ul li:hover {
     padding-inline: 5%;
   }
   .cards-grid {
-    max-width: 85%;
+    max-width: 100%;
     display: grid;
     grid-column-gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
@@ -1276,4 +1276,11 @@ header ul li:hover {
     width: 45%;
   }
   /* END OF HERO */
+
+  .cards-grid {
+    max-width: 86%;
+    display: grid;
+    grid-column-gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
